/*
 * Copyright 2022, TeamDev. All rights reserved.
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

syntax = "proto3";

package spine.test.aggregate.query;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.aggregate.query";
option java_outer_classname = "AggregateQueryTestProto";
option java_multiple_files = true;

import "spine/net/url.proto";

message MRPhotoId {

    string uuid = 1;
}

message MRVideoId {

    string uuid = 1;
}

message MRPhoto {
    option (entity) = {kind: AGGREGATE visibility: QUERY};

    MRPhotoId id = 1;

    spine.net.Url full_size_url = 2 [(validate) = true];

    spine.net.Url thumbnail_url = 3 [(validate) = true, (required) = false];

    string alt_text = 4 [(column) = true];

    int32 width = 5 [(min).value = "0", (column) = true];

    int32 height = 6 [(min).value = "0", (column) = true];

    MRPhotoType source_type = 7 [(required) = true, (column) = true];
}

enum MRPhotoType {
    MRPT_UNDEFINED = 0;
    FULL_FRAME = 1;
    CROP_FRAME = 2;
    THUMBNAIL = 3;
}

message MRVideo {
    option (entity) = {kind: AGGREGATE visibility: FULL};

    MRVideoId id = 1;

    MRPhotoId title_shot = 2 [(validate) = true];

    spine.net.Url file_url = 3 [(validate) = true];

    map<string, spine.net.Url> soundtrack_url = 4 [(validate) = true, (required) = false];

    map<string, spine.net.Url> subtitles_url = 5 [(validate) = true, (required) = false];
}

// An aggregate which is used to ensure it is NOT available to querying.
message MRSoundRecord {
    option (entity) = {kind: AGGREGATE visibility: NONE};

    string id = 1;
}

message MRLocalizedVideo {
    option (entity).kind = PROJECTION;

    MRVideoId id = 1;

    MRPhotoId title_shot = 2 [(validate) = true];

    spine.net.Url file_url = 3 [(validate) = true];

    spine.net.Url sound_track_url = 4 [(validate) = true, (required) = false];

    spine.net.Url subtitles_url = 5 [(validate) = true, (required) = false];
}

message MRIncompleteAudio {
    option (entity).kind = ENTITY;

    string id = 1;

    spine.net.Url url = 2;

    reserved 3 to 42;
}
